se modifico el footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Daniela Apolonia Zamora | Todos los derechos reservados.</p>
+      <h4>&copy; 2025 Daniela Apolonia Zamora </h4>
+        <p>Todos los derechos reservados.</p>
     </div>
   </footer>
   
